--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,8 +11,12 @@
     <p class="caption">
       <%= @post.caption %>
     </p>
-    <div class="text-center">
+    <div class="text-center edit-links">
       <%= link_to "Cancel", posts_path %>
+      |
+      <%= link_to "Edit Post", edit_post_path(@post) %>
+      |
+      <%= link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Do you want to delete this post?" } %>
     </div>
   </div>
 </div>
