--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
     	<% flash.each do |name, msg| %>
     		<%= content_tag :div, msg, class: [:alert, alert_for(name)] %>
 			<% end %>
+    <!-- 
     <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class="alert"><%= alert %></p> -->
     <%= yield %>
   </body>
 </html>
