--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,6 +13,7 @@
       <%= link_to (image_tag post.image.url(:medium), class:'img-responsive'), post_path(post) %>
     </div>
     <div class="post-bottom">
+      <%= render 'posts/likes', post: post %>
       <div class="caption">
         <div class="caption-content">
           <div class="user-name">
@@ -34,7 +35,9 @@
     </div>
     <div class="comment-like-form row">
       <div class="like-button col-sm-1">
-        <span class="glyphicon glyphicon-heart-empty"></span>
+        <%= link_to '', like_post_path(post.id), remote: true, 
+          id: "like_#{post.id}",
+          class: "glyphicon glyphicon-heart-empty" %>
       </div>
       <div class="comment-form col-sm-11">
         <%= form_for([post, post.comments.build], remote: true) do |f| %>
