--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,9 @@
     <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 			  <% if user_signed_in? %>
+			  	<li>
+			  		<%= render 'notifications/notification_dropdown' %>
+			  	</li>
 			    <li>
 			      <%= link_to "New Post", new_post_path %>
 			    </li>
