--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,6 +16,9 @@
 			  	<li>
 			  		<%= render 'notifications/notification_dropdown' %>
 			  	</li>
+			  	<li>
+			  		<%= link_to "Browse Posts", browse_posts_path %>
+			  	</li>
 			    <li>
 			      <%= link_to "New Post", new_post_path %>
 			    </li>
