--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,5 @@
 <div class="text-center">
 <%= render 'form'  %>
-
+<%= link_to "Delete post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" } %>
+|
+<%= link_to "Cancel", root_path %>
